applied second batch of modifications

--- a/paperdraft.tex
+++ b/paperdraft.tex
@@ -258,7 +258,7 @@ C = \sum_{m=1}^{10} N_m^i \bigg[ E(\theta)  N_m^j + \frac{\big[1-E(\theta)\big]}
 \]
 A mathematically more rigorous derivation of this function can be found in Appendix \ref{sec:calc of xipm}.
 
-If we want to compute this for all 5 redshift bins of the KV450-survey, this forces us to calculate 1275 correlation functions and coadding them, thus yielding potential numerical errors (apart from being computationally expensive). However, if we examine Eq.\,\eqref{eq:lenseff}, we see that the comoving distance distribution of sources enters linearly. This in turn implies that in Equations \eqref{eq:pkappa-pdelta/lenseff} and \eqref{eq:xipm-pkappa} both source distance distributions enter linearly, meaning that, instead of adding correlation functions, we can add their respective redshift distributions and compute the correlation functions of that. In particular, we can define the \textit{combined number of galaxies} $N^i$ and \textit{average comoving distance probability distribution} $\mathcal{L}^i(\chi)$ of tomographic bin $i$ as \[
+If we want to compute this for all 5 redshift bins of the KV450-survey, this forces us to calculate 1275 correlation functions and coadding them, thus yielding potential numerical errors (apart from being computationally expensive). However, if we examine Eq.~\eqref{eq:lenseff}, we see that the comoving distance distribution of sources enters linearly. This in turn implies that in Eqs.~\eqref{eq:pkappa-pdelta/lenseff} and \eqref{eq:xipm-pkappa} both source distance distributions enter linearly, meaning that, instead of adding correlation functions, we can add their respective redshift distributions and compute the correlation functions of that. In particular, we can define the \textit{combined number of galaxies} $N^i$ and \textit{average comoving distance probability distribution} $\mathcal{L}^i(\chi)$ of tomographic bin $i$ as \[
 N^i\equiv\sum_m N_m^i\, , \qquad \mathcal{L}^i(\chi) = \frac{\sum_m N_m^i \mathcal{L}_m^i(\chi)}{\sum_m N_m^i} \, .
 \]
 If we define $\xi^{ij}_\pm$ as the correlation functions between the average comoving distance distributions $\mathcal{L}^i(\chi)$ and $\mathcal{L}^j(\chi)$, then we observe: \begin{align}
@@ -294,19 +294,21 @@ where the $\xi_{+,nn}^{ij}(\theta_{\rm{ref}})$ denotes the model correlation fun
 
 While the first method suffers from the fact that the power-law index only holds for sources of redshifts $1\lesssim z \lesssim 2$, the second method is sensitive to the angular range $\theta$, at which the shear correlation functions are evaluated, which is fairly arbitrary.
 
-We applied both analytic methods and the semianalytic one to data from the KV450 survey, following the separation into tomographic bins as in H18, and computed the ratio of observed and modeled correlation functions.\todo{Probably I should include some more specifications of the KV450 survey here?} Furthermore, we conducted numerical simulations investigating the same issue: A $100\,\rm{deg}^2$ field in the Scinet Light Cone Simulations (SLICS) \citep{2018MNRAS.481.1337H} was randomly separated into 10 percentiles. For each tomographic redshift bin of each percentile, galaxies were placed to trace the respective redshift distribution. Afterwards, their expected shear was determined (shape-noise in the form of intrinsic ellipticities of galaxies was not included). This was compared to a set of simulations where the galaxies were simply distributed according to the combined redshift distribution of each respective tomographic bin\todo{Catherine, I feel like I am grossly oversimplifying what you did. Maybe you could write a short paragraph about the simulations?}. The results can be seen in Fig.~\ref{fig:all_xis}.
+We applied both analytic methods and the semianalytic one to data from the KV450 survey, following the separation into tomographic bins as in H18, and computed the ratio of observed and modeled correlation functions. Furthermore, we conducted numerical simulations, where a $100\,\rm{deg}^2$ field in the Scinet Light Cone Simulations (SLICS) \citep{2018MNRAS.481.1337H} was randomly separated into 10 percentiles. For each tomographic redshift bin of each percentile, source galaxies were distributed according to the respective redshift distribution and their shear was determined (shape-noise in the form of intrinsic ellipticities of galaxies was not included). This was compared to a set of simulations where the galaxies were distributed according to the combined redshift distribution of each respective tomographic bin\todo{Catherine, I feel like I am grossly oversimplifying what you did. Maybe you could write a short paragraph about the simulations?}. The results can be seen in Fig.~\ref{fig:all_xis}.
 	\begin{figure}
 	\centering
 	\includegraphics[width=1\textwidth]{images/xis_all.pdf}
-	\caption{The ratio of observed to modelled correlation functions for the analytic methods (green), the semi-analytic method (blue) and the numerical simulations (red) for a cross-correlation of all redshift bins. The numbers in the upper left corners correspond to the respective redshift bins, the upper left triangle depicts the ratios of $\xi_+$, whereas the lower right triangle depicts the ratios of $\xi_-$. For the characteristic scale $\theta_{\rm{ref}}$ of the second analytic method we chose $\theta_{\rm{ref}} \approx 11'$.}
+	\caption{The ratio of observed to modelled correlation functions for the analytic methods (green), the semi-analytic method (blue) and one realization of the numerical simulations (red) for a cross-correlation of all redshift bins. The numbers in the upper left corners correspond to the respective redshift bins, the upper left triangle depicts the ratios of $\xi_+$, whereas the lower right triangle depicts the ratios of $\xi_-$. For the characteristic scale $\theta_{\rm{ref}}$ of the second analytic method we chose $\theta_{\rm{ref}} \approx 11'$.}
 	\label{fig:all_xis}
 	\end{figure}
 %We can see that for high redshift bins, the analytic and the semi-analytic methods are consistent, whereas for low redshift bins they significantly diverge. We explain this due to the facts that the analyic method uses simplifications that are redshift-dependent and only hold for small variations in redshift, which is not fulfilled in the low redshift bins.
-We observe that for high redshift bins, both analytic methods as well as the semi-analytic one yield consistent results. Due to the redshift-dependent index in the power law of the first analytic method, it is not able to sufficiently describe the effect for low redshift bins. The second analytic method, however, matches the semi-analytic one for all $\xi_+$. As $\xi_-$ is affected much stronger by this effect, the analytic method is not able to trace this change.\todo{Should I include the plot number density vs average redshift from the talk? Maybe in the appendix to avoid too many Figures?}\footnote{The effect on $\xi_-$ is much stronger due to the fact that in Equation \eqref{eq:xipm-pkappa}, $\xi_+$ is computed by filtering the power spectrum with the 0-th order Bessel function. This function peaks at $\ell\theta=0$, meaning that for all values of $\theta$, the correlation function $\xi_+$ is sensitive to small values of $\ell$, corresponding to large separations $\theta$. However, $\xi_-$ is obtained by filtering with the 4-th order Bessel function, which peaks at approximately $\ell\theta\approx 5$, so for different $\theta$ this function is sensitive to varying parts of the convergence power spectrum. A more detailed analysis of this can be found in the Appendix of \citet{2017MNRAS.471.4412K}.}
+We observe that for high-redshift bins, both analytic methods as well as the semi-analytic one yield consistent results. Due to the redshift-dependent index in the power law of the first analytic method, it is not able to accurately describe the effect for low redshift bins. The second analytic method, however, traces the semi-analytic one pretty well for $\xi_+$. As $\xi_-$ is affected much stronger by this effect, the analytic method is not able to trace this change.\footnote{The effect on $\xi_-$ is much stronger due to the fact that in Equation \eqref{eq:xipm-pkappa}, $\xi_+$ is computed by filtering the power spectrum with the 0-th order Bessel function. This function peaks at $\ell\theta=0$, meaning that for all values of $\theta$, the correlation function $\xi_+$ is sensitive to small values of $\ell$, corresponding to large separations $\theta$. However, $\xi_-$ is obtained by filtering with the 4-th order Bessel function, which peaks at approximately $\ell\theta\approx 5$, so for different $\theta$ this function is sensitive to varying parts of the convergence power spectrum. A more detailed analysis of this can be found in the Appendix of \citet{2017MNRAS.471.4412K}.}
 
-The simulations seem to be in rough agreement with the models, but there are some significant differences. After a thorough analysis we explain these discrepancies the following way: The simulations were performed on a $100\,\rm{deg}^2$ field, which means that shot-noise of the fields plays a significant role. After performing the same simulations for a different distribution of depth between the pointings and obtaining completely different results, we are quite certain that this is the dominating effect. The implications of this and possible mitigation strategies will be discussed in Sect.~\ref{sec:discussion}.
+The simulations and the models seem to be in rough agreement, but there are some significant differences. After a thorough analysis we explain these discrepancies the following way: The simulations shown in Fig.~\ref{fig:all_xis} were performed on a single $100\,\rm{deg}^2$ field, which means that sample variance of the depth distribution of the fields plays a significant role. Performing the same simulations for a different realization of depth between the pointings, we obtained completely different results. The implications of this and possible mitigation strategies will be discussed in Sect.~\ref{sec:discussion}. \todo{I will probably completely rewrite this paragraph in case it is possible to conduct a few more simulations.}
 
-As the next step we computed a reference correlation function given a fiducial cosmology for each combination of redshift bins, and modified said correlation function according to our semi-analytic model. Then we ran a Markov-Chain Monte Carlo simulation to check for a potential bias in the cosmological parameters, using the covariance-matrix computed in \citet{2017MNRAS.465.1454H}. As our main interest lies in the $\Omega_{\rm m}$ - $\sigma_8$ combination, we restricted our analysis to those two parameters. As can be seen in Figure \ref{fig:mcmc_kids}, the impact of varying depth is barely noticeable and insignificant compared to the uncertainties. However, to get a rough estimate for the impact on a Euclid-like survey, we divided the used covariance-matrix by 30, to account for the increased survey area. As can be seen in Figure \ref{fig:mcmc_euclid}, here the impact on both $\Omega_{\rm m}$ and $\sigma_8$ is significant, however it seems that the parameter $S_8$ is considerably more robust against this effect.
+In Sec.~\ref{sec:expand_eoftheta} we develop a model to extract the correction $\xi_\pm^{ij}/\xi_{\pm,\rm{obs}}^{ij}$ for a specific survey footprint. With this model we can estimate the impacts of a correlated distribution of depth, the sample variance of the depth-distribution and boundary effects. We find that for quadratic footprint of $450\,\rm{deg}^2$ or $1000\,\rm{deg}^2$ with an uncorrelated depth-distribution, finite field effects are negligible.
+
+As the next step we chose a fiducial cosmology $\b \Phi$ and computed a reference correlation function $\xi_\pm^{ij}(\theta,\b\Phi)$ for each pair of redshift bins $i,j$. Using those, we calculated the observed correlation function $\xi_\pm^{ij,\rm{obs}}(\theta,\b\Phi)$ according to our semi-analytic model in Sect.~\ref{sec:xipm_semianalytic}. Then we ran a Markov-Chain Monte Carlo simulation to check for the resulting bias in the inferred cosmological parameters, using the covariance-matrix computed in H18. As our main interest lies in the $\Omega_{\rm m}$ - $\sigma_8$ combination, we restricted our analysis to those two parameters. As can be seen in Figure \ref{fig:mcmc_kids}, the impact of varying depth is barely noticeable and insignificant compared to the uncertainties. To get a rough estimate for the impact on future surveys, we divided our covariance-matrix by a factor of 30, to approximately account for the increased survey area of LSST and Euclid with respect to KV450. As can be seen in Figure \ref{fig:mcmc_euclid}, here the impact on both $\Omega_{\rm m}$ and $\sigma_8$ is significant. Conveniently it seems that the parameter $S_8$ is considerably more robust against this effect.
 
 \begin{figure}
 \begin{subfigure}{0.5\textwidth}
@@ -322,9 +324,9 @@ As the next step we computed a reference correlation function given a fiducial c
 \caption{Estimation of the bias caused by a variation of depth in a cosmic shear survey. Both simulations were computed using a fiducial cosmology of $\Omega_{\rm{m}}=0.25$ and $\sigma_8 = 0.85$.}
 \end{figure} 
 
-Calculating the correction for varying values of $\Omega_{\rm{m}}$ and $\sigma_8$ reveals a nontrivial dependency on the cosmology, which can be observed in Figure \ref{fig:comparecosmo}. However, as for the computation of the correction we need to calculate 165 correlation functions, we did not yet account for that in our MCMC analysis.
+Calculating the correction $\xi_\pm^{ij}/\xi_\pm^{ij,\rm{obs}}$ for varying values of $\Omega_{\rm{m}}$ and $\sigma_8$ reveals a nontrivial dependence on the cosmology, which can be seen in Figure \ref{fig:comparecosmo}.
 
-To estimate the B-Modes created by this effect, we have extracted the \emph{Complete Orthogonal Sets of E- and B-Mode Integrals} (COSEBIS, compare \citet{2010A&A...520A.116S}), once of a reference set of correlation functions, to estimate numerical inaccuracies,\footnote{For a reference correlation function the B-Modes should be consistent with zero.} and then for the correlation functions that have been modified to account for a varying depth. We report a consistent B-Mode pattern across all redshift-bins, which can be seen in Figure \ref{fig:bmodes_cosebi}. We also note that the difference in E-Modes is as large as the B-Modes, which suggests that any significant change in the cosmological parameters due to a varying depth will also yield the significant detection of B-Modes.
+To estimate the B-modes created by this effect, we have extracted the \emph{Complete Orthogonal Sets of E- and B-Mode Integrals} \citep[COSEBIS, compare][]{2010A&A...520A.116S}, once of a reference set of correlation functions, to estimate numerical inaccuracies,\footnote{For a reference correlation function the B-Modes should be consistent with zero.} and then for the correlation functions that have been modified to account for a varying depth. We report a consistent B-mode behaviour across all redshift-bins, which can be seen in Figure \ref{fig:bmodes_cosebi}. It should be noted that the difference in E-modes is as large as the B-modes, which suggests that any significant change in the cosmological parameters due to a varying depth will also yield the significant detection of B-modes.
 
 \begin{figure}
 \centering
@@ -337,13 +339,11 @@ To estimate the B-Modes created by this effect, we have extracted the \emph{Comp
 
 \section{Discussion}
 \label{sec:discussion}
-With our semi-analytic model we try to describe the impacts of varying depth in ground-based surveys. During our analysis we have assumed a few simplifications, which we will discuss.
+With our semi-analytic model we try to describe the impacts of varying depth in ground-based cosmic shear surveys. During our analysis we have made several simplifications, which we discuss below.
 \begin{enumerate}
-\item In the most general terms, we are analysing the effects of a position-based selection function on cosmic shear surveys. In our analysis, this selection function was governed by the $r$-band depth of a pointing. This neglects a number of other effects: The depth in different bands and the seeing of a pointing will also modify the number densities and redshift distributions on the scale of a pointing, whereas dithering strategies as well as imperfections in the telescope and CCD cause modifications on sub-pointing scales. However, we believe that these effects are subdominant compared to the variations caused by the $r$-band depth.
+\item In the most general terms, we are analysing the effects of a position-dependent selection function on cosmic shear surveys. In our analysis, this selection function was governed by the KiDS $r$-band depth of a pointing. This neglects a number of other effects: The depth in different bands and the seeing of a pointing will also modify the number densities and redshift distributions on the scale of a pointing, whereas dithering strategies as well as imperfections in the telescope and CCD cause modifications on sub-pointing scales. However, we believe that these effects are subdominant compared to the variations caused by the $r$-band depth.
 
-\item We have assumed an infinitely large survey area with an uncorrelated distribution of the depth-function. While the boundary effects arising from a finite survey footprint would have a small impact on the shape of the function $E(\theta)$\footnote{This would be due to the fact that a pointing next to a boundary has less neighbours, therefore making it more likely that a galaxy pair is in the same pointing.}, the governing factor is the shot noise of the depth-distribution. We have assumed that the probability that a neighbouring pointing is of percentile $n$ is exactly the expectation value, namely $1/10$. While this is true for an infinitely large survey with an uncorrelated distribution of the depth-function, Figure \ref{fig:all_xis} clearly shows that it is not valid for a $100\,\rm{deg}^2$ field. Whether our assumption holds true for the $450\,\rm{deg}^2$ footprint of the KV450 survey, or even the $1350\,\rm{deg}^2$ footprint of the final survey, is an important question. Also, we have assumed an uncorrelated distribution of the depth-function, both in the simulations as well as in the models. While this is likely true as a rough approximation (very few pointings of the survey were taken on the same night and thus under the same weather conditions), effects like airmass, lunar phase, Galactic extinction and seasonal weather are likely to influence the depth on scales larger than one pointing.
-
-A strategy for the mitigation of finite field effects, boundaries and a correlated distribution of depth is given in Appendix \ref{sec:expand_eoftheta}. We find that finite field effects are not significant for a $450\,\rm{deg}^2$ or $1000\,\rm{deg}^2$-field, if the distribution of depth is uncorrelated.
+\item We have assumed an infinitely large survey area with an uncorrelated distribution of the depth-function. While the boundary effects arising from a finite survey footprint would have a small impact on the shape of the function $E(\theta)$\footnote{This would be due to the fact that a pointing next to a boundary has less neighbours, therefore making it more likely that a galaxy pair is in the same pointing.}, the governing factor is the sample variance of the depth-distribution. We have assumed that the probability that any pointing is of percentile $n$ is exactly the expectation value, namely $1/10$. While this is true for an infinitely large survey with an uncorrelated distribution of the depth-function, it does not necessarily hold for a real survey. However, our analysis in Sec.~\ref{sec:expand_eoftheta} suggests that these effects are not significant for the KV450 survey. We have also assumed an uncorrelated distribution of the depth-function, both in the simulations as well as in the models. While this is likely true as a rough approximation (very few pointings of the survey were taken on the same night and thus under the same weather conditions), effects like airmass, lunar phase, Galactic extinction and seasonal weather are likely to influence the depth on scales larger than one pointing.
 
 \item In our MCMC simulations we did not account for degeneracies with other cosmological parameters
 % (apart from $\Omega_{\rm m}, \sigma_8, w_0$ and $w_a$)
