--- a/cite.bib
+++ b/cite.bib
@@ -7,8 +7,7 @@
  author = {{Kilbinger}, Martin and {Heymans}, Catherine and {Asgari}, Marika and
 {Joudaki}, Shahab and {Schneider}, Peter and {Simon}, Patrick and
 {Van Waerbeke}, Ludovic and {Harnois-D{\'e}raps}, Joachim and {Hildebrand
-t}, Hendrik and {K{\"o}hlinger}, Fabian and {Kuijken}, Konrad and
-{Viola}, Massimo},
+t}, Hendrik and {K{\"o}hlinger}, Fabian},
  doi = {10.1093/mnras/stx2082},
  eprint = {1702.05301},
  journal = {\mnras},
@@ -187,12 +186,7 @@ t}, Hendrik and {K{\"o}hlinger}, Fabian and {Kuijken}, Konrad and
  author = {{Heymans}, Catherine and {Grocutt}, Emma and {Heavens}, Alan and
 {Kilbinger}, Martin and {Kitching}, Thomas D. and {Simpson}, Fergus and
 {Benjamin}, Jonathan and {Erben}, Thomas and {Hildebrandt}, Hendrik and
-{Hoekstra}, Henk and {Mellier}, Yannick and {Miller}, Lance and
-{Van Waerbeke}, Ludovic and {Brown}, Michael L. and {Coupon}, Jean and
-{Fu}, Liping and {Harnois-D{\'e}raps}, Joachim and
-{Hudson}, Michael J. and {Kuijken}, Konrad and {Rowe}, Barnaby and
-{Schrabback}, Tim and {Semboloni}, Elisabetta and {Vafaei}, Sanaz and
-{Velander}, Malin},
+{Hoekstra}, Henk},
  doi = {10.1093/mnras/stt601},
  eprint = {1303.1808},
  journal = {\mnras},
@@ -231,77 +225,7 @@ t}, Hendrik and {K{\"o}hlinger}, Fabian and {Kuijken}, Konrad and
  archiveprefix = {arXiv},
  author = {{Planck Collaboration} and {Ade}, P.~A.~R. and {Aghanim}, N. and
 {Arnaud}, M. and {Ashdown}, M. and {Aumont}, J. and {Baccigalupi}, C. and
-{Banday}, A.~J. and {Barreiro}, R.~B. and {Bartolo}, N. and
-{Battaner}, E. and {Battye}, R. and {Benabed}, K. and
-{Beno{\^\i}t}, A. and {Benoit-L{\'e}vy}, A. and {Bernard}, J. -P. and
-{Bersanelli}, M. and {Bielewicz}, P. and {Bock}, J.~J. and
-{Bonaldi}, A. and {Bonavera}, L. and {Bond}, J.~R. and {Borrill}, J. and
-{Bouchet}, F.~R. and {Bucher}, M. and {Burigana}, C. and
-{Butler}, R.~C. and {Calabrese}, E. and {Cardoso}, J. -F. and
-{Catalano}, A. and {Challinor}, A. and {Chamballu}, A. and
-{Chiang}, H.~C. and {Christensen}, P.~R. and {Church}, S. and
-{Clements}, D.~L. and {Colombi}, S. and {Colombo}, L.~P.~L. and
-{Combet}, C. and {Couchot}, F. and {Coulais}, A. and {Crill}, B.~P. and
-{Curto}, A. and {Cuttaia}, F. and {Danese}, L. and {Davies}, R.~D. and
-{Davis}, R.~J. and {de Bernardis}, P. and {de Rosa}, A. and
-{de Zotti}, G. and {Delabrouille}, J. and {D{\'e}sert}, F. -X. and
-{Diego}, J.~M. and {Dole}, H. and {Donzelli}, S. and {Dor{\'e}}, O. and
-{Douspis}, M. and {Ducout}, A. and {Dupac}, X. and {Efstathiou}, G. and
-{Elsner}, F. and {En{\ss}lin}, T.~A. and {Eriksen}, H.~K. and
-{Fergusson}, J. and {Finelli}, F. and {Forni}, O. and {Frailis}, M. and
-{Fraisse}, A.~A. and {Franceschi}, E. and {Frejsel}, A. and
-{Galeotta}, S. and {Galli}, S. and {Ganga}, K. and {Giard}, M. and
-{Giraud-H{\'e}raud}, Y. and {Gjerl{\o}w}, E. and
-{Gonz{\'a}lez-Nuevo}, J. and {G{\'o}rski}, K.~M. and {Gratton}, S. and
-{Gregorio}, A. and {Gruppuso}, A. and {Gudmundsson}, J.~E. and
-{Hansen}, F.~K. and {Hanson}, D. and {Harrison}, D.~L. and
-{Heavens}, A. and {Helou}, G. and {Henrot-Versill{\'e}}, S. and
-{Hern{\'a}ndez-Monteagudo}, C. and {Herranz}, D. and {Hildebrand
-t}, S.~R. and {Hivon}, E. and {Hobson}, M. and {Holmes}, W.~A. and
-{Hornstrup}, A. and {Hovest}, W. and {Huang}, Z. and
-{Huffenberger}, K.~M. and {Hurier}, G. and {Jaffe}, A.~H. and
-{Jaffe}, T.~R. and {Jones}, W.~C. and {Juvela}, M. and
-{Keih{\"a}nen}, E. and {Keskitalo}, R. and {Kisner}, T.~S. and
-{Knoche}, J. and {Kunz}, M. and {Kurki-Suonio}, H. and {Lagache}, G. and
-{L{\"a}hteenm{\"a}ki}, A. and {Lamarre}, J. -M. and {Lasenby}, A. and
-{Lattanzi}, M. and {Lawrence}, C.~R. and {Leonardi}, R. and
-{Lesgourgues}, J. and {Levrier}, F. and {Lewis}, A. and {Liguori}, M. and
-{Lilje}, P.~B. and {Linden-V{\o}rnle}, M. and {L{\'o}pez-Caniego}, M. and
-{Lubin}, P.~M. and {Ma}, Y. -Z. and {Mac{\'\i}as-P{\'e}rez}, J.~F. and
-{Maggio}, G. and {Maino}, D. and {Mandolesi}, N. and {Mangilli}, A. and
-{Marchini}, A. and {Maris}, M. and {Martin}, P.~G. and
-{Martinelli}, M. and {Mart{\'\i}nez-Gonz{\'a}lez}, E. and {Masi}, S. and
-{Matarrese}, S. and {McGehee}, P. and {Meinhold}, P.~R. and
-{Melchiorri}, A. and {Mendes}, L. and {Mennella}, A. and
-{Migliaccio}, M. and {Mitra}, S. and {Miville-Desch{\^e}nes}, M. -A. and
-{Moneti}, A. and {Montier}, L. and {Morgante}, G. and {Mortlock}, D. and
-{Moss}, A. and {Munshi}, D. and {Murphy}, J.~A. and {Narimani}, A. and
-{Naselsky}, P. and {Nati}, F. and {Natoli}, P. and
-{Netterfield}, C.~B. and {N{\o}rgaard-Nielsen}, H.~U. and
-{Noviello}, F. and {Novikov}, D. and {Novikov}, I. and
-{Oxborrow}, C.~A. and {Paci}, F. and {Pagano}, L. and {Pajot}, F. and
-{Paoletti}, D. and {Pasian}, F. and {Patanchon}, G. and
-{Pearson}, T.~J. and {Perdereau}, O. and {Perotto}, L. and
-{Perrotta}, F. and {Pettorino}, V. and {Piacentini}, F. and {Piat}, M. and
-{Pierpaoli}, E. and {Pietrobon}, D. and {Plaszczynski}, S. and
-{Pointecouteau}, E. and {Polenta}, G. and {Popa}, L. and
-{Pratt}, G.~W. and {Pr{\'e}zeau}, G. and {Prunet}, S. and
-{Puget}, J. -L. and {Rachen}, J.~P. and {Reach}, W.~T. and
-{Rebolo}, R. and {Reinecke}, M. and {Remazeilles}, M. and
-{Renault}, C. and {Renzi}, A. and {Ristorcelli}, I. and {Rocha}, G. and
-{Rosset}, C. and {Rossetti}, M. and {Roudier}, G. and
-{Rowan-Robinson}, M. and {Rubi{\~n}o-Mart{\'\i}n}, J.~A. and
-{Rusholme}, B. and {Salvatelli}, V. and {Sandri}, M. and {Santos}, D. and
-{Savelainen}, M. and {Savini}, G. and {Schaefer}, B.~M. and
-{Scott}, D. and {Seiffert}, M.~D. and {Shellard}, E.~P.~S. and
-{Spencer}, L.~D. and {Stolyarov}, V. and {Stompor}, R. and
-{Sudiwala}, R. and {Sunyaev}, R. and {Sutton}, D. and
-{Suur-Uski}, A. -S. and {Sygnet}, J. -F. and {Tauber}, J.~A. and
-{Terenzi}, L. and {Toffolatti}, L. and {Tomasi}, M. and {Tristram}, M. and
-{Tucci}, M. and {Tuovinen}, J. and {Valenziano}, L. and
-{Valiviita}, J. and {Van Tent}, B. and {Viel}, M. and {Vielva}, P. and
-{Villa}, F. and {Wade}, L.~A. and {Wandelt}, B.~D. and {Wehus}, I.~K. and
-{White}, M. and {Yvon}, D. and {Zacchei}, A. and {Zonca}, A.},
+{Banday}, A.~J. and {Barreiro}, R.~B. and {Bartolo}, N.},
  doi = {10.1051/0004-6361/201525814},
  eid = {A14},
  eprint = {1502.01590},
@@ -361,15 +285,7 @@ t}, S.~R. and {Hivon}, E. and {Hobson}, M. and {Holmes}, W.~A. and
  archiveprefix = {arXiv},
  author = {{Hildebrandt}, H. and {Viola}, M. and {Heymans}, C. and {Joudaki}, S. and
 {Kuijken}, K. and {Blake}, C. and {Erben}, T. and {Joachimi}, B. and
-{Klaes}, D. and {Miller}, L. and {Morrison}, C.~B. and {Nakajima}, R. and
-{Verdoes Kleijn}, G. and {Amon}, A. and {Choi}, A. and {Covone}, G. and
-{de Jong}, J.~T.~A. and {Dvornik}, A. and {Fenech Conti}, I. and
-{Grado}, A. and {Harnois-D{\'e}raps}, J. and {Herbonnet}, R. and
-{Hoekstra}, H. and {K{\"o}hlinger}, F. and {McFarland}, J. and
-{Mead}, A. and {Merten}, J. and {Napolitano}, N. and {Peacock}, J.~A. and
-{Radovich}, M. and {Schneider}, P. and {Simon}, P. and
-{Valentijn}, E.~A. and {van den Busch}, J.~L. and {van Uitert}, E. and
-{Van Waerbeke}, L.},
+{Klaes}, D. and {Miller}, L.},
  doi = {10.1093/mnras/stw2805},
  eprint = {1606.05338},
  journal = {\mnras},
@@ -390,10 +306,7 @@ t}, S.~R. and {Hivon}, E. and {Hobson}, M. and {Holmes}, W.~A. and
  author = {{Joudaki}, Shahab and {Mead}, Alexander and {Blake}, Chris and
 {Choi}, Ami and {de Jong}, Jelte and {Erben}, Thomas and
 {Fenech Conti}, Ian and {Herbonnet}, Ricardo and {Heymans}, Catherine and
-{Hildebrandt}, Hendrik and {Hoekstra}, Henk and {Joachimi}, Benjamin and
-{Klaes}, Dominik and {K{\"o}hlinger}, Fabian and {Kuijken}, Konrad and
-{McFarland}, John and {Miller}, Lance and {Schneider}, Peter and
-{Viola}, Massimo},
+{Hildebrandt}, Hendrik},
  doi = {10.1093/mnras/stx998},
  eprint = {1610.04606},
  journal = {\mnras},
@@ -413,9 +326,7 @@ t}, S.~R. and {Hivon}, E. and {Hobson}, M. and {Holmes}, W.~A. and
  archiveprefix = {arXiv},
  author = {{K{\"o}hlinger}, F. and {Viola}, M. and {Joachimi}, B. and
 {Hoekstra}, H. and {van Uitert}, E. and {Hildebrandt}, H. and
-{Choi}, A. and {Erben}, T. and {Heymans}, C. and {Joudaki}, S. and
-{Klaes}, D. and {Kuijken}, K. and {Merten}, J. and {Miller}, L. and
-{Schneider}, P. and {Valentijn}, E.~A.},
+{Choi}, A. and {Erben}, T. and {Heymans}, C. and {Joudaki}, S.},
  doi = {10.1093/mnras/stx1820},
  eprint = {1706.02892},
  journal = {\mnras},
@@ -436,59 +347,7 @@ t}, S.~R. and {Hivon}, E. and {Hobson}, M. and {Holmes}, W.~A. and
  author = {{Planck Collaboration} and {Aghanim}, N. and {Akrami}, Y. and
 {Ashdown}, M. and {Aumont}, J. and {Baccigalupi}, C. and
 {Ballardini}, M. and {Banday}, A.~J. and {Barreiro}, R.~B. and
-{Bartolo}, N. and {Basak}, S. and {Battye}, R. and {Benabed}, K. and
-{Bernard}, J. -P. and {Bersanelli}, M. and {Bielewicz}, P. and
-{Bock}, J.~J. and {Bond}, J.~R. and {Borrill}, J. and {Bouchet}, F.~R. and
-{Boulanger}, F. and {Bucher}, M. and {Burigana}, C. and
-{Butler}, R.~C. and {Calabrese}, E. and {Cardoso}, J. -F. and
-{Carron}, J. and {Challinor}, A. and {Chiang}, H.~C. and {Chluba}, J. and
-{Colombo}, L.~P.~L. and {Combet}, C. and {Contreras}, D. and
-{Crill}, B.~P. and {Cuttaia}, F. and {de Bernardis}, P. and
-{de Zotti}, G. and {Delabrouille}, J. and {Delouis}, J. -M. and
-{Di Valentino}, E. and {Diego}, J.~M. and {Dor{\'e}}, O. and
-{Douspis}, M. and {Ducout}, A. and {Dupac}, X. and {Dusini}, S. and
-{Efstathiou}, G. and {Elsner}, F. and {En{\ss}lin}, T.~A. and
-{Eriksen}, H.~K. and {Fantaye}, Y. and {Farhang}, M. and
-{Fergusson}, J. and {Fernandez-Cobos}, R. and {Finelli}, F. and
-{Forastieri}, F. and {Frailis}, M. and {Franceschi}, E. and
-{Frolov}, A. and {Galeotta}, S. and {Galli}, S. and {Ganga}, K. and
-{G{\'e}nova-Santos}, R.~T. and {Gerbino}, M. and {Ghosh}, T. and
-{Gonz{\'a}lez-Nuevo}, J. and {G{\'o}rski}, K.~M. and {Gratton}, S. and
-{Gruppuso}, A. and {Gudmundsson}, J.~E. and {Hamann}, J. and {Hand
-ley}, W. and {Herranz}, D. and {Hivon}, E. and {Huang}, Z. and
-{Jaffe}, A.~H. and {Jones}, W.~C. and {Karakci}, A. and
-{Keih{\"a}nen}, E. and {Keskitalo}, R. and {Kiiveri}, K. and {Kim}, J. and
-{Kisner}, T.~S. and {Knox}, L. and {Krachmalnicoff}, N. and {Kunz}, M. and
-{Kurki-Suonio}, H. and {Lagache}, G. and {Lamarre}, J. -M. and
-{Lasenby}, A. and {Lattanzi}, M. and {Lawrence}, C.~R. and
-{Le Jeune}, M. and {Lemos}, P. and {Lesgourgues}, J. and {Levrier}, F. and
-{Lewis}, A. and {Liguori}, M. and {Lilje}, P.~B. and {Lilley}, M. and
-{Lindholm}, V. and {L{\'o}pez-Caniego}, M. and {Lubin}, P.~M. and
-{Ma}, Y. -Z. and {Mac{\'\i}as-P{\'e}rez}, J.~F. and {Maggio}, G. and
-{Maino}, D. and {Mandolesi}, N. and {Mangilli}, A. and
-{Marcos-Caballero}, A. and {Maris}, M. and {Martin}, P.~G. and
-{Martinelli}, M. and {Mart{\'\i}nez-Gonz{\'a}lez}, E. and
-{Matarrese}, S. and {Mauri}, N. and {McEwen}, J.~D. and
-{Meinhold}, P.~R. and {Melchiorri}, A. and {Mennella}, A. and
-{Migliaccio}, M. and {Millea}, M. and {Mitra}, S. and
-{Miville-Desch{\^e}nes}, M. -A. and {Molinari}, D. and {Montier}, L. and
-{Morgante}, G. and {Moss}, A. and {Natoli}, P. and
-{N{\o}rgaard-Nielsen}, H.~U. and {Pagano}, L. and {Paoletti}, D. and
-{Partridge}, B. and {Patanchon}, G. and {Peiris}, H.~V. and
-{Perrotta}, F. and {Pettorino}, V. and {Piacentini}, F. and
-{Polastri}, L. and {Polenta}, G. and {Puget}, J. -L. and
-{Rachen}, J.~P. and {Reinecke}, M. and {Remazeilles}, M. and
-{Renzi}, A. and {Rocha}, G. and {Rosset}, C. and {Roudier}, G. and
-{Rubi{\~n}o-Mart{\'\i}n}, J.~A. and {Ruiz-Granados}, B. and
-{Salvati}, L. and {Sandri}, M. and {Savelainen}, M. and {Scott}, D. and
-{Shellard}, E.~P.~S. and {Sirignano}, C. and {Sirri}, G. and
-{Spencer}, L.~D. and {Sunyaev}, R. and {Suur-Uski}, A. -S. and
-{Tauber}, J.~A. and {Tavagnacco}, D. and {Tenti}, M. and
-{Toffolatti}, L. and {Tomasi}, M. and {Trombetti}, T. and
-{Valenziano}, L. and {Valiviita}, J. and {Van Tent}, B. and
-{Vibert}, L. and {Vielva}, P. and {Villa}, F. and {Vittorio}, N. and {Wand
-elt}, B.~D. and {Wehus}, I.~K. and {White}, M. and {White}, S.~D.~M. and
-{Zacchei}, A. and {Zonca}, A.},
+{Bartolo}, N.},
  eid = {arXiv:1807.06209},
  eprint = {1807.06209},
  journal = {arXiv e-prints},
@@ -507,17 +366,7 @@ elt}, B.~D. and {Wehus}, I.~K. and {White}, M. and {White}, S.~D.~M. and
  author = {{Hikage}, Chiaki and {Oguri}, Masamune and {Hamana}, Takashi and
 {More}, Surhud and {Mandelbaum}, Rachel and {Takada}, Masahiro and
 {K{\"o}hlinger}, Fabian and {Miyatake}, Hironao and
-{Nishizawa}, Atsushi J. and {Aihara}, Hiroaki and {Armstrong}, Robert and
-{Bosch}, James and {Coupon}, Jean and {Ducout}, Anne and {Ho}, Paul and
-{Hsieh}, Bau-Ching and {Komiyama}, Yutaka and
-{Lanusse}, Fran{\c{c}}ois and {Leauthaud}, Alexie and
-{Lupton}, Robert H. and {Medezinski}, Elinor and {Mineo}, Sogo and
-{Miyama}, Shoken and {Miyazaki}, Satoshi and {Murata}, Ryoma and
-{Murayama}, Hitoshi and {Shirasaki}, Masato and
-{Sif{\'o}n}, Crist{\'o}bal and {Simet}, Melanie and {Speagle}, Joshua and
-{Spergel}, David N. and {Strauss}, Michael A. and {Sugiyama}, Naoshi and
-{Tanaka}, Masayuki and {Utsumi}, Yousuke and {Wang}, Shiang-Yu and
-{Yamada}, Yoshihiko},
+{Nishizawa}, Atsushi J. and {Aihara}, Hiroaki},
  doi = {10.1093/pasj/psz010},
  eid = {43},
  eprint = {1809.09148},
@@ -539,7 +388,7 @@ elt}, B.~D. and {Wehus}, I.~K. and {White}, M. and {White}, S.~D.~M. and
  author = {{Asgari}, Marika and {Heymans}, Catherine and {Hildebrandt}, Hendrik and
 {Miller}, Lance and {Schneider}, Peter and {Amon}, Alexandra and
 {Choi}, Ami and {Erben}, Thomas and {Georgiou}, Christos and
-{Harnois-Deraps}, Joachim and {Kuijken}, Konrad},
+{Harnois-Deraps}, Joachim},
  doi = {10.1051/0004-6361/201834379},
  eid = {A134},
  eprint = {1810.02353},
@@ -559,12 +408,7 @@ elt}, B.~D. and {Wehus}, I.~K. and {White}, M. and {White}, S.~D.~M. and
  archiveprefix = {arXiv},
  author = {{Hildebrandt}, H. and {K{\"o}hlinger}, F. and {van den Busch}, J.~L. and
 {Joachimi}, B. and {Heymans}, C. and {Kannawadi}, A. and
-{Wright}, A.~H. and {Asgari}, M. and {Blake}, C. and {Hoekstra}, H. and
-{Joudaki}, S. and {Kuijken}, K. and {Miller}, L. and {Morrison}, C.~B. and
-{Tr{\"o}ster}, T. and {Amon}, A. and {Archidiacono}, M. and
-{Brieden}, S. and {Choi}, A. and {de Jong}, J.~T.~A. and {Erben}, T. and
-{Giblin}, B. and {Mead}, A. and {Peacock}, J.~A. and {Radovich}, M. and
-{Schneider}, P. and {Sif{\'o}n}, C. and {Tewes}, M.},
+{Wright}, A.~H. and {Asgari}, M. and {Blake}, C. and {Hoekstra}, H.},
  eid = {arXiv:1812.06076},
  eprint = {1812.06076},
  journal = {arXiv e-prints},
@@ -583,8 +427,7 @@ elt}, B.~D. and {Wehus}, I.~K. and {White}, M. and {White}, S.~D.~M. and
  author = {{Harnois-D{\'e}raps}, J. and {Amon}, A. and {Choi}, A. and
 {Demchenko}, V. and {Heymans}, C. and {Kannawadi}, A. and
 {Nakajima}, R. and {Sirks}, E. and {van Waerbeke}, L. and
-{Cai}, Yan-Chuan and {Giblin}, B. and {Hildebrandt}, H. and
-{Hoekstra}, H. and {Miller}, L. and {Tr{\"o}ster}, T.},
+{Cai}, Yan-Chuan},
  doi = {10.1093/mnras/sty2319},
  eprint = {1805.04511},
  journal = {\mnras},
@@ -604,44 +447,7 @@ elt}, B.~D. and {Wehus}, I.~K. and {White}, M. and {White}, S.~D.~M. and
  archiveprefix = {arXiv},
  author = {{Troxel}, M.~A. and {MacCrann}, N. and {Zuntz}, J. and {Eifler}, T.~F. and
 {Krause}, E. and {Dodelson}, S. and {Gruen}, D. and {Blazek}, J. and
-{Friedrich}, O. and {Samuroff}, S. and {Prat}, J. and {Secco}, L.~F. and
-{Davis}, C. and {Fert{\'e}}, A. and {DeRose}, J. and {Alarcon}, A. and
-{Amara}, A. and {Baxter}, E. and {Becker}, M.~R. and
-{Bernstein}, G.~M. and {Bridle}, S.~L. and {Cawthon}, R. and
-{Chang}, C. and {Choi}, A. and {De Vicente}, J. and
-{Drlica-Wagner}, A. and {Elvin-Poole}, J. and {Frieman}, J. and
-{Gatti}, M. and {Hartley}, W.~G. and {Honscheid}, K. and {Hoyle}, B. and
-{Huff}, E.~M. and {Huterer}, D. and {Jain}, B. and {Jarvis}, M. and
-{Kacprzak}, T. and {Kirk}, D. and {Kokron}, N. and {Krawiec}, C. and
-{Lahav}, O. and {Liddle}, A.~R. and {Peacock}, J. and {Rau}, M.~M. and
-{Refregier}, A. and {Rollins}, R.~P. and {Rozo}, E. and
-{Rykoff}, E.~S. and {S{\'a}nchez}, C. and {Sevilla-Noarbe}, I. and
-{Sheldon}, E. and {Stebbins}, A. and {Varga}, T.~N. and {Vielzeuf}, P. and
-{Wang}, M. and {Wechsler}, R.~H. and {Yanny}, B. and
-{Abbott}, T.~M.~C. and {Abdalla}, F.~B. and {Allam}, S. and
-{Annis}, J. and {Bechtol}, K. and {Benoit-L{\'e}vy}, A. and
-{Bertin}, E. and {Brooks}, D. and {Buckley-Geer}, E. and
-{Burke}, D.~L. and {Carnero Rosell}, A. and {Carrasco Kind}, M. and
-{Carretero}, J. and {Castander}, F.~J. and {Crocce}, M. and
-{Cunha}, C.~E. and {D'Andrea}, C.~B. and {da Costa}, L.~N. and
-{DePoy}, D.~L. and {Desai}, S. and {Diehl}, H.~T. and
-{Dietrich}, J.~P. and {Doel}, P. and {Fernandez}, E. and
-{Flaugher}, B. and {Fosalba}, P. and {Garc{\'\i}a-Bellido}, J. and
-{Gaztanaga}, E. and {Gerdes}, D.~W. and {Giannantonio}, T. and
-{Goldstein}, D.~A. and {Gruendl}, R.~A. and {Gschwend}, J. and
-{Gutierrez}, G. and {James}, D.~J. and {Jeltema}, T. and
-{Johnson}, M.~W.~G. and {Johnson}, M.~D. and {Kent}, S. and
-{Kuehn}, K. and {Kuhlmann}, S. and {Kuropatkin}, N. and {Li}, T.~S. and
-{Lima}, M. and {Lin}, H. and {Maia}, M.~A.~G. and {March}, M. and
-{Marshall}, J.~L. and {Martini}, P. and {Melchior}, P. and
-{Menanteau}, F. and {Miquel}, R. and {Mohr}, J.~J. and {Neilsen}, E. and
-{Nichol}, R.~C. and {Nord}, B. and {Petravick}, D. and {Plazas}, A.~A. and
-{Romer}, A.~K. and {Roodman}, A. and {Sako}, M. and {Sanchez}, E. and
-{Scarpine}, V. and {Schindler}, R. and {Schubnell}, M. and {Smith}, M. and
-{Smith}, R.~C. and {Soares-Santos}, M. and {Sobreira}, F. and
-{Suchyta}, E. and {Swanson}, M.~E.~C. and {Tarle}, G. and {Thomas}, D. and
-{Tucker}, D.~L. and {Vikram}, V. and {Walker}, A.~R. and {Weller}, J. and
-{Zhang}, Y. and {DES Collaboration}},
+{Friedrich}, O. and {Samuroff}, S.},
  doi = {10.1103/PhysRevD.98.043528},
  eid = {043528},
  eprint = {1708.01538},
@@ -707,6 +513,65 @@ elt}, B.~D. and {Wehus}, I.~K. and {White}, M. and {White}, S.~D.~M. and
  year = {2008}
 }
 
+@article{Joudaki:2019,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2019arXiv190609262J},
+ archiveprefix = {arXiv},
+ author = {{Joudaki}, S. and {Hildebrandt}, H. and {Traykova}, D. and
+{Chisari}, N.~E. and {Heymans}, C. and {Kannawadi}, A. and
+{Kuijken}, K. and {Wright}, A.~H. and {Asgari}, M. and {Erben}, T.},
+ eid = {arXiv:1906.09262},
+ eprint = {1906.09262},
+ journal = {arXiv e-prints},
+ keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
+ month = {Jun},
+ pages = {arXiv:1906.09262},
+ primaryclass = {astro-ph.CO},
+ title = {{KiDS+VIKING-450 and DES-Y1 combined: Cosmology with cosmic shear}},
+ year = {2019}
+}
+
+@article{Kuijken:2015,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2015MNRAS.454.3500K},
+ archiveprefix = {arXiv},
+ author = {{Kuijken}, Konrad and {Heymans}, Catherine and {Hildebrandt}, Hendrik and
+{Nakajima}, Reiko and {Erben}, Thomas and {de Jong}, Jelte T.~A. and
+{Viola}, Massimo and {Choi}, Ami and {Hoekstra}, Henk and
+{Miller}, Lance},
+ doi = {10.1093/mnras/stv2140},
+ eprint = {1507.00738},
+ journal = {\mnras},
+ keywords = {gravitational lensing: weak, surveys, galaxies: photometry, cosmology: observations, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Astrophysics of Galaxies},
+ month = {Dec},
+ number = {4},
+ pages = {3500-3532},
+ primaryclass = {astro-ph.CO},
+ title = {{Gravitational lensing analysis of the Kilo-Degree Survey}},
+ volume = {454},
+ year = {2015}
+}
+
+@article{Kuijken:2019,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2019A&A...625A...2K},
+ archiveprefix = {arXiv},
+ author = {{Kuijken}, K. and {Heymans}, C. and {Dvornik}, A. and {Hildebrandt}, H. and
+{de Jong}, J.~T.~A. and {Wright}, A.~H. and {Erben}, T. and
+{Bilicki}, M. and {Giblin}, B. and {Shan}, H. -Y.},
+ doi = {10.1051/0004-6361/201834918},
+ eid = {A2},
+ eprint = {1902.11265},
+ journal = {\aap},
+ keywords = {galaxies: general, surveys, large-scale structure of Universe, Astrophysics - Astrophysics of Galaxies, Astrophysics - Cosmology and Nongalactic Astrophysics},
+ month = {May},
+ pages = {A2},
+ primaryclass = {astro-ph.GA},
+ title = {{The fourth data release of the Kilo-Degree Survey: ugri imaging and nine-band optical-IR photometry over 1000 square degrees}},
+ volume = {625},
+ year = {2019}
+}
+
 @article{Laureijs:2011,
  adsnote = {Provided by the SAO/NASA Astrophysics Data System},
  adsurl = {https://ui.adsabs.harvard.edu/abs/2011arXiv1110.3193L},
@@ -759,5 +624,19 @@ elt}, B.~D. and {Wehus}, I.~K. and {White}, M. and {White}, S.~D.~M. and
  primaryclass = {astro-ph.CO},
  title = {{KiDS+VIKING-450: A new combined optical \&amp; near-IR dataset for cosmology and astrophysics}},
  year = {2018}
+}
+
+@misc{Xavier:2016,
+ adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+ adsurl = {https://ui.adsabs.harvard.edu/abs/2016ascl.soft06015X},
+ archiveprefix = {ascl},
+ author = {{Xavier}, Henrique S. and {Abdalla}, Filipe B. and {Joachimi}, Benjamin},
+ eid = {ascl:1606.015},
+ eprint = {1606.015},
+ keywords = {Software},
+ month = {Jun},
+ pages = {ascl:1606.015},
+ title = {{FLASK: Full-sky Lognormal Astro-fields Simulation Kit}},
+ year = {2016}
 }
 
