--- a/paperdraft.tex
+++ b/paperdraft.tex
@@ -66,11 +66,22 @@
           \and Hendrik Hildebrandt\inst{2,1}
           \and Catherine Heymans\inst{3} 
           \and Marika Asgari\inst{3}
+          \and Chieh-An Lin\inst{3,5,6}
+          \and B.~Joachimi\inst{4}
+          \and T.~Tr\"{o}ster\inst{3}
           }
    \institute{Argelander-Institut f\"ur Astronomie, Auf dem H\"ugel 71, 53121 Bonn, Germany 
 \and 
-Astronomisches Institut, Ruhr-Universit\"at Bochum, Universit\"atsstr. 150, 44801 Bochum, Germany \and
-Institute for Astronomy, University of Edinburgh, Royal Observatory, Blackford Hill, Edinburgh EH9 3HJ, UK  \\ \email{sven@astro.uni-bonn.de, peter@astro.uni-bonn.de}
+Astronomisches Institut, Ruhr-Universit\"at Bochum, Universit\"atsstr. 150, 44801 Bochum, Germany 
+\and
+Institute for Astronomy, University of Edinburgh, Royal Observatory, Blackford Hill, Edinburgh EH9 3HJ, UK
+\and
+Department of Physics and Astronomy, University College London, Gower Street, London WC1E 6BT, UK
+\and
+Service d'Astrophysique, CEA Saclay, Orme des Merisiers, B\^at 709, 91191 Gif-sur-Yvette, France
+\and 
+Fenglin Veteran Hospital, 2 Zhongzheng Rd. Sec. 1, Fenglin Township, Hualien 97544, Taiwan
+\\ \email{sven@astro.uni-bonn.de, peter@astro.uni-bonn.de}
              }
 
    \date{Received XXX; accepted XXX}
