added coauthors; please check your affiliations

--- a/paperdraft.tex
+++ b/paperdraft.tex
@@ -61,14 +61,14 @@
 
 %   \subtitle{}
 
-   \author{S. Heydenreich\inst{1}%\fnmsep\thanks{sven@astro.uni-bonn.de}
+   \author{Sven Heydenreich\inst{1}%\fnmsep\thanks{sven@astro.uni-bonn.de}
           \and Peter Schneider\inst{1} 
           \and Hendrik Hildebrandt\inst{2,1}
           \and Catherine Heymans\inst{3} 
           \and Marika Asgari\inst{3}
           \and Chieh-An Lin\inst{3,5,6}
-          \and B.~Joachimi\inst{4}
-          \and T.~Tr\"{o}ster\inst{3}
+          \and Benjamin Joachimi\inst{4}
+          \and Tilman Tr\"{o}ster\inst{3}
           }
    \institute{Argelander-Institut f\"ur Astronomie, Auf dem H\"ugel 71, 53121 Bonn, Germany 
 \and 
