--- a/paperdraft.tex
+++ b/paperdraft.tex
@@ -309,7 +309,7 @@ While the first method suffers from the fact that the power-law index only holds
 
 We applied both analytic methods and the semianalytic one to data from KV450, following the separation into tomographic bins as in H18, and computed the ratio between our model for the observed correlation function $\xi_{\pm}^{\rm{obs}}$, and the model correlation function ignoring variations in depth, $\xi_{\pm}$. 
 
-We compare our models to the results measured from numerical simulations. Using a modified version (Joachimi, Lin, et al. in prep.) of Full-sky Lognormal Astro-fields Simulation Kit \citep[FLASK,][]{Xavier:2016}, we generated galaxy mocks with coherent clustering and lensing signals from lognormal fields. For each lognormal field, one mock with uniform depth and another one with variable depth were generated. In the variable case, we measured the depth of tiles in the KiDS-1000 data \citep{Kuijken:2019} and performed an analogous separation into 10 bins. Each depth bin can then be associated with a tomographic redshift set and the galaxy redshifts were sampled accordingly from one of the 10 distributions. We observed that the relation between depth and effective number density, as well as the one between depth and shape noise, is linear, so we sampled both quantities for each bin from a linear fit. In the uniform case, redshifts, number densities and shape noise were sampled from the average of these 10 tomographic sets. Finally, we compute the ratio of the average lensing signals from the two mocks. The number of realizations is 2000. Shape noise is omitted. The results can be seen in Fig.~\ref{fig:all_xis}.
+We compare our models to the results measured from numerical simulations. Using a modified version (Joachimi, Lin, et al. in prep.) of Full-sky Lognormal Astro-fields Simulation Kit \citep[FLASK,][]{Xavier:2016}, we generated galaxy mocks with coherent clustering and lensing signals from lognormal fields. For each lognormal field, one mock with uniform depth and another one with variable depth were generated. In the variable case, we measured the depth of tiles in the KiDS-1000 data \citep{Kuijken:2019} and performed an analogous separation into 10 bins. Each depth bin can then be associated with a tomographic redshift set and the galaxy redshifts were sampled accordingly from one of the 10 distributions. We observed that the relation between depth and effective number density is linear, so we sampled the number density of a pointing from a linear fit of this relation. In the uniform case, redshifts, number densities and shape noise were sampled from the average of these 10 tomographic sets. Finally, we compute the ratio of the average lensing signals from the two mocks. The number of realizations is 2000. Shape noise is omitted. The results can be seen in Fig.~\ref{fig:all_xis}.
 	\begin{figure}
 	\centering
 	\includegraphics[width=1\textwidth]{images/xis_all1.pdf}
